// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarMenu renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <ul
      class="relative list-none outline-none py-2 px-0 m-0 rounded-sm shadow-0 order-1 [& &]:flex-1 flex-grow flex-shrink max-w"
      role="menu"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`SidebarMenu with bottom 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <ul
      class="relative list-none outline-none py-2 px-0 m-0 rounded-sm shadow-0 [& &]:flex-1 flex-grow flex-shrink max-w order-[99]"
      role="menu"
      tabindex="-1"
    />
  </div>
</div>
`;
